<resources>
    <string name="app_name">Error</string>
    <string name="action_settings">Settings</string>
    <string name="search_menu">搜索</string>
    <string name="change_menu">切换</string>
    <string name="create_note">新建备忘录</string>
    <string name="welcome_tip02">您可以在这里新建备忘录…</string>
    <string name="welcome_tip01">欢迎使用</string>
    <string name="title">标题</string>
    <string name="note_content">笔记内容</string>
    <string name="pick_photo_menu">拾取照片</string>
    <string name="share_menu">分享</string>
    <string name="finish_write_menu">完成</string>
    <string name="diy_edit_text">diy edit text</string>
    <string name="to_camera">拍照</string>
    <string name="to_gallery">图库</string>
    <string name="save_ok_tip">备忘保存成功</string>
    <string name="save_none_tip">"当前笔记无内容，并没有保存 ^#^ "</string>
    <string name="delete_note_tip">备忘删除成功</string>
    <string name="delete_note_fail_tip">备忘删除失败</string>
    <string name="delete_fail_tip">备忘删除失败</string>
    <string name="date_and_content">%1$s    %2$s</string>
    <string name="note_save_fail">备忘保存失败</string>
    <string name="_2017_12_31">2017–12–31</string>
    <string name="content_text">Content Text</string>
    <string name="label_text">Label Text</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="click_2_search">点击搜索笔记</string>
    <string name="search_result_tip">为您搜索到%1$d项结果</string>
    <string name="before_hour" formatted="false">%d\u0020小时之前</string>
    <string name="before_day" formatted="false">%d\u0020天之前</string>
    <string name="before_month" formatted="false">%d\u0020个月之前</string>
    <string name="before_year" formatted="false">%d\u0020年之前</string>
    <string name="before_half_hour">半个小时之前</string>
    <string name="just_now">刚刚</string>
    <string name="no_title">无标题</string>
    <string name="click_2_add_title">点击添加标题</string>
    <string name="content_tip">内容</string>
    <string name="long_img_creating">长图片生成中…</string>
    <string name="no_data_2_share">当前并无可分享内容…</string>
    <string name="selected_conuts">已选择%1$d</string>
    <string name="delete_notes_tip">是否删除此备忘录?</string>
    <string name="counts_img">%1$d张图片</string>
    <string name="debug_tip">" 数据加载失败，无法显示正常数据...请debug调试 ！"</string>
    <string name="share_retry">分享失败，请重试...</string>
    <string name="runtime_tip02">节点记录出错，请 review 代码逻辑！</string>
    <string name="debug_log01">" insertOrUpdate 到db 的数据信息 ！"</string>
    <string name="img_uri_error">图片url保存失败</string>
    <string name="db_error">当前id无对应数据，或对应多条数据 ！</string>
    <string name="share_title">分享一下</string>
    <string name="memo_leak_error">内存不足，图片导入失败...</string>
</resources>
