<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.pythoncat.memo.activity.MainActivity">
    <item
        android:id="@+id/action_pick_up_photos"
        android:icon="@drawable/action_camera"
        android:orderInCategory="1"
        android:title="@string/pick_photo_menu"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/action_share"
        android:orderInCategory="1"
        android:title="@string/share_menu"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_finish_write"
        android:icon="@drawable/action_complete"
        android:orderInCategory="1"
        android:title="@string/finish_write_menu"
        app:showAsAction="ifRoom"/>
</menu>
