<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.pythoncat.memo.activity.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/action_search"
        android:orderInCategory="1"
        android:title="@string/search_menu"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/action_change"
        android:orderInCategory="1"
        android:icon="@drawable/action_change_2_grid"
        android:title="@string/change_menu"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="1"
        android:icon="@drawable/action_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
</menu>
