<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/notes_item_root"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="@dimen/card_margin"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp">

        <ImageView
            android:id="@+id/item_note_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/note"
            android:visibility="visible"/>

        <View
            android:id="@+id/item_note_light_darker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:background="#4d000000"
            android:padding="0dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item_note_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:lines="1"
                android:text="@string/_2017_12_31"
                android:textColor="@color/item_content_color"
                android:textSize="8sp"
                tools:ignore="SmallSp"/>

            <CheckBox
                android:id="@+id/item_note_checked"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:button="@drawable/checkbox_grid_style"
                android:clickable="false"
                android:focusable="false"/>

            <TextView
                android:id="@+id/item_note_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@id/item_note_checked"
                android:layout_toStartOf="@id/item_note_checked"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/label_text"
                android:textColor="@color/item_title_color"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/item_note_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/item_note_date"
                android:layout_below="@id/item_note_title"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:ellipsize="end"
                android:lines="6"
                android:text="@string/content_text"
                android:textColor="@color/item_content_color"
                android:textSize="12sp"/>
        </RelativeLayout>


    </android.support.v7.widget.CardView>


</FrameLayout>
