<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        android:id="@+id/notes_item_root"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_margin="@dimen/card_margin"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="3dp">

        <View
            android:id="@+id/item_note_light_darker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_note_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/label_text"
                    android:textColor="@color/item_title_color"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/item_note_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/item_note_title"
                    android:layout_alignStart="@id/item_note_title"
                    android:layout_below="@id/item_note_title"
                    android:layout_marginTop="1dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/content_text"
                    android:textColor="@color/item_content_color"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/item_note_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@id/item_note_title"
                    android:layout_alignStart="@id/item_note_title"
                    android:layout_below="@id/item_note_content"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="7dp"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:text="@string/_2017_12_31"
                    android:textColor="@color/item_content_color"
                    android:textSize="8sp"
                    tools:ignore="SmallSp"/>
            </RelativeLayout>

            <ImageView
                android:id="@+id/item_note_img"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="6dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/note"
                android:visibility="visible"/>

            <CheckBox
                android:id="@+id/item_note_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="7dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="7dp"
                android:layout_marginStart="20dp"
                android:button="@drawable/checkbox_list_style"
                android:checked="true"
                android:clickable="false"
                android:focusable="false"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
