<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/content_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.pythoncat.memo.activity.NoteActivity"
            tools:showIn="@layout/activity_note">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/note_static_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_window_background"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/title"
                android:textColor="#1DB4D3"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/note_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_window_background"
                android:hint="@string/click_2_add_title"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="6dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/item_content_color"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_window_background"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="12dp"
                android:text="@string/content_tip"
                android:textColor="#1DB4D3"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/note_title_edit_content01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_window_background"
                android:hint="@string/click_2_add_title"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="6dp"
                android:textColor="@color/item_title_color"
                android:textColorHint="@color/item_content_color"
                android:textSize="16sp"/>
        </LinearLayout>

        <!-- dynamic items container  content_linear_layout -->
        <!--<com.techainsh.memo.view.ColoredLinearyLayout-->
        <com.pythoncat.memo.view.ColoredLinearyLayout
            android:id="@+id/note_dynamic_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </LinearLayout>
</ScrollView>
